--- a/style.css
+++ b/style.css
@@ -144,13 +144,6 @@ p {
     text-align: left;
 }
 
-#tabela-registro {
-    background: linear-gradient(to top, rgba(53, 42, 81,1), rgba(44, 35, 66,1));
-    padding: 4px;
-    box-sizing: border-box;
-    border-radius: 4px;
-}
-
 h5 {
     font-family: Arial;
 }
@@ -220,7 +213,6 @@ table td {
 table thead th {
     position: sticky;
     top: 0; 
-    background-color: #14233B;
     z-index: 1;
 }
 
@@ -228,8 +220,6 @@ table tbody {
     display: block;
     max-height: 150px;
     overflow-y: auto;
-    border-radius: 4px;
-    background-color: #14233B;
 }
 
 table thead, 
@@ -604,3 +594,40 @@ label img {
     background-color: #6e5fe2;
 }
 
+.modal-ataque {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: rgb(0, 0, 0);
+    border: 2px solid #000;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    z-index: 1000;
+    padding: 20px;
+    width: 300px;
+    border-radius: 8px;
+}
+
+.modal-content {
+    text-align: center;
+}
+
+.modal-content h2 {
+    margin-bottom: 20px;
+}
+
+.lista-jogadores {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+.lista-jogadores li {
+    margin: 10px 0;
+}
+
+.modal-content button {
+    margin: 10px 5px;
+    padding: 10px 20px;
+    cursor: pointer;
+}
