--- a/style.css
+++ b/style.css
@@ -713,3 +713,9 @@ label img {
     border-radius: 4px; 
     border: 2px solid #222; 
 }
+
+#relatorio-jogador {
+    background-color: #4c6c4f;
+    padding: 8px;
+    border-radius: 4px;
+}
