--- a/style.css
+++ b/style.css
@@ -433,7 +433,7 @@ label img {
     padding: 0;
 }
 
-#mestre-jogo img {
+#mestre-jogo img, #mestre-dia img {
     width: 100px;
     background-color: #ffffff;
     padding: 12px 60px;
@@ -467,8 +467,18 @@ label img {
     text-shadow: none;
 }
 
-.imagem-papel #nome-jogador {
+.imagem-papel #nome-jogador, #noite{
     background-color: rgb(31, 24, 46);
+    border-radius: 4px;
+    text-shadow: none;
+    text-align: center;
+    padding: 6px;
+    margin: 12px;
+    font-size: 1.6rem;
+}
+
+#dia {
+    background-color: #151515;
     border-radius: 4px;
     text-shadow: none;
     text-align: center;
@@ -732,7 +742,7 @@ label img {
     height: 100%;
     max-width: 100%;
     box-sizing: border-box;
-    background: linear-gradient(to bottom, rgba(221, 221, 221, 0.5), rgba(0, 0, 0, 0.23)), url('img/dia.jpg');
+    background: linear-gradient(to bottom, rgba(255, 255, 255, 1), rgba(77, 77, 77, 0.23));
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
@@ -746,7 +756,57 @@ label img {
     border-style: solid;
     border-width: 4px;
     border-color: #fff;
-    background-color: rgb(61, 49, 84);
+    background-color: #2C2C2C;
     border-radius: 12px;
     padding: 0;
+}
+
+#mestre-dia .grid .imagem-papel .nome-jogador {
+    background-color: #151515;
+    font-size: 1.6rem;
+}
+
+.nome-jogador {
+    background-color: #647A52;
+}
+
+#obs {
+    background-color: #9A7665;
+}
+
+#mestre-dia .nome-pessoa, #mestre-dia .nome-pessoa #relatorio {
+    background-color: #635A4C;
+}
+
+#mestre-dia .nome-pessoa #descricao-relatorio {
+    background-color: #717070;
+    padding: 4px;
+    margin: 0;
+}
+
+#relatorio {
+    padding: 0;
+}
+
+#relatorio-jogador {
+    margin: 6px 0;
+}
+
+#mestre-dia .nome-pessoa .nome-jogador {
+    background-color: #433B31;
+}
+
+#mestre-dia #sortear {
+    background-color: #030303;
+}
+
+.espaco-vitoria {
+    font-size: 1rem;
+}
+
+.espaco-vitoria h5 {
+    font-size: 1.4rem;
+    background-color: #000000;
+    margin: 4px;
+    border-radius: 6px;
 }
