--- a/style.css
+++ b/style.css
@@ -754,7 +754,7 @@ label img {
 }
 
 #pai-mestre-jogo-vitoria {
-    padding: 1rem;
+    padding: 1rem 0;
     display: flex;
     align-items: center;
     justify-content: center;
