--- a/style.css
+++ b/style.css
@@ -646,6 +646,7 @@ label img {
     align-content: center;
     padding: 12px;
     margin: auto;
+    flex-direction: column;
 }
 
 .modal-content h2 {
@@ -913,33 +914,48 @@ label img {
 }
 
 .modal-chat, .modal-mensagens {
+    display: flex;
+    margin: auto;
     position: fixed;
+    flex-direction: column;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    background: white;
-    padding: 20px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-    border-radius: 8px;
+    background-color: rgba(31, 24, 46,0.95);
     z-index: 1000;
-}
-
-.modal-content {
-    text-align: center;
+    padding: 20px;
+    width: 100%;
+    height: 100%;
+    border-radius: 12px;
 }
 
 #botao-chat {
     position: fixed;
     bottom: 20px;
-    right: 20px;
-    padding: 10px 20px;
-    background: #007bff;
+    left: 20px;
+    padding: 12px;
+    font-family: "Righteous", sans-serif;
+    background-color: #14233B;
     color: white;
     border: none;
-    border-radius: 5px;
+    border-radius: 24px;
     cursor: pointer;
+    margin: 2px;
+    margin-bottom: 10px;
+    font-size: 1rem;
 }
 
 #botao-chat:hover {
     background: #0056b3;
+}
+
+#selecao-mensagem {
+    margin: 10px 0;
+}
+
+#jogador-selecionado, #mensagem-chat{
+    border-radius: 12px;
+    padding: 10px;
+    font-family: "Righteous", sans-serif;
+    font-size: 1.4rem;
 }
